; ModuleID = '/home/carl/AnghaBench/reactos/base/applications/msconfig_new/extr_utils.c_ClipOrCenterWindowToMonitor.c'
source_filename = "/home/carl/AnghaBench/reactos/base/applications/msconfig_new/extr_utils.c_ClipOrCenterWindowToMonitor.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32, i32 }

@SWP_NOSIZE = common dso_local global i32 0, align 4
@SWP_NOZORDER = common dso_local global i32 0, align 4
@SWP_NOACTIVATE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ClipOrCenterWindowToMonitor(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca %struct.TYPE_4__, align 4
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  %7 = load i32, i32* %4, align 4
  %8 = call i32 @GetWindowRect(i32 %7, %struct.TYPE_4__* %6)
  %9 = load i32, i32* %5, align 4
  %10 = call i32 @ClipOrCenterRectToMonitor(%struct.TYPE_4__* %6, i32 %9)
  %11 = load i32, i32* %4, align 4
  %12 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %6, i32 0, i32 1
  %13 = load i32, i32* %12, align 4
  %14 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %6, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = load i32, i32* @SWP_NOSIZE, align 4
  %17 = load i32, i32* @SWP_NOZORDER, align 4
  %18 = or i32 %16, %17
  %19 = load i32, i32* @SWP_NOACTIVATE, align 4
  %20 = or i32 %18, %19
  %21 = call i32 @SetWindowPos(i32 %11, i32* null, i32 %13, i32 %15, i32 0, i32 0, i32 %20)
  %22 = load i32, i32* %3, align 4
  ret i32 %22
}

declare dso_local i32 @GetWindowRect(i32, %struct.TYPE_4__*) #1

declare dso_local i32 @ClipOrCenterRectToMonitor(%struct.TYPE_4__*, i32) #1

declare dso_local i32 @SetWindowPos(i32, i32*, i32, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
